se copian archivos

--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Google Sign-In Demo</title>
+
     <script src="https://apis.google.com/js/platform.js" async defer></script>
-    <meta name="google-signin-client_id" content="665027198195-cfc2r5i8bp31d8ibpovj4flppjrhhu8c.apps.googleusercontent.com">
+    <meta name="google-signin-client_id" content="219758474264-vh1bibcphgvbc32km508lubtqkanikf1.apps.googleusercontent.com">
+
 </head>
 
 <body>
 
-    <!--<img src="http://localhost:3000/imagen/usuarios/5ff12e39989a8e2ea08cf2c0-852.jpg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c3VhcmlvIjp7InJvbGUiOiJBRE1JTl9ST0xFIiwiZXN0YWRvIjpmYWxzZSwiZ29vZ2xlIjpmYWxzZSwiX2lkIjoiNWZmMTJmNWVkNmQ3MzkzZDMwZjg4MzdhIiwibm9tYnJlIjoiWWVzaWthIiwiZW1haWwiOiJ5ZXNzaWNhc3Ryb0BnbWFpbC5jb20iLCJfX3YiOjB9LCJpYXQiOjE2MTAzMjg0MjMsImV4cCI6MTYxMDUwMTIyM30.uK5161N10Gp-xhCaywacwgpzH7uePuNsAXzNCRL3oTY"
-        alt="">-->
+
+    <!-- <img src="http://localhost:3000/imagen/usuarios/5aa69ce1dc2afa0875c84d02-28.png?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c3VhcmlvIjp7InJvbGUiOiJBRE1JTl9ST0xFIiwiZXN0YWRvIjpmYWxzZSwiZ29vZ2xlIjp0cnVlLCJfaWQiOiI1YWE2OWNlMWRjMmFmYTA4NzVjODRkMDIiLCJub21icmUiOiJNZWxpc3NhIEZsb3JlcyIsImVtYWlsIjoidGVzdDFAZ21haWwuY29tIiwiX192IjowfSwiaWF0IjoxNTIxNDcwOTE1LCJleHAiOjE1MjE2NDM3MTV9.H26MDoLrbuYiOVQPSmjwOqur5Dkv72YOJVMukJdiSMU" alt=""> -->
+
+
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
+
 
     <a href="#" onclick="signOut();">Sign out</a>
     <script>
@@ -25,6 +31,7 @@
         }
     </script>
 
+
     <script>
         function onSignIn(googleUser) {
             var profile = googleUser.getBasicProfile();
@@ -33,8 +40,12 @@
             console.log('Image URL: ' + profile.getImageUrl());
             console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
 
+
             var id_token = googleUser.getAuthResponse().id_token;
+
             console.log(id_token);
+
+
             var xhr = new XMLHttpRequest();
             xhr.open('POST', '/google');
             xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
@@ -42,8 +53,10 @@
                 console.log('Signed in as: ' + xhr.responseText);
             };
             xhr.send('idtoken=' + id_token);
+
         }
     </script>
+
 </body>
 
 </html>
